# 2022.09-2022.11-FastAPI-base-app

./: pyproject.toml
app/: main.py  routers.py
